@@ -1,5 +1,9 @@
 2006-11-02  Chris Dunlap  <cdunlap@llnl.gov>
 
+	* src/munged/conf.c (create_subkeys): Moved check for minimum length
+	  of keyfile from _conf_open_keyfile() in order for it to be performed
+	  on the number of bytes processed instead of the size of the file.
+
 	* src/munged/random.c (HAVE_LIBGCRYPT:_random_read_seed):
 	  Removed warning if seed does not exist.
 
